tests/auto/qml/qqmlecmascript/data/PreNamed.qml
@@ -1,0 +1,11 @@
+import QtQml
+
+QtObject {
+    property QtObject other: QtObject {
+        objectName: "original"
+    }
+    objectName: other.objectName
+    function updateOriginal() {
+        other.objectName = "updated"
+    }
+}
