tests/auto/qml/qqmlecmascript/data/qpropertyBindingReplacement.qml
@@ -1,0 +1,6 @@
+import QtQml
+
+PreNamed {
+    objectName: "overwritten"
+    Component.onCompleted: updateOriginal()
+}
